start : header + css added + animation on small head

--- a/index.html
+++ b/index.html
@@ -2,9 +2,50 @@
 <head>
     <meta charset="UTF-8">
     <title>TP2</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/script.js"></script>
 </head>
 <body>
-    <h1>TP2</h1>
+    <header>
+        <nav>
+            <h1 class="nMarque">Nom Marque</h1>
+            <div class="rightPosition">
+                <p>Accueil</p>
+                <p>Présentation</p>
+                <p>Contacts</p>
+                <button>Acheter</button>
+            </div>
+        </nav>
+        <section class="MainContent first">
+            <div class="MainContent-content">
+                <h1>Blabla Lorem ipsum dolor sit amet</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                    exercitation ullamco laboris nisi ut aliquip ex ea 
+                    commodo consequat. Duis aute irure dolor in reprehenderit
+                    in voluptate velit esse cillum dolore eu fugiat nulla 
+                    pariatur. Excepteur sint occaecat cupidatat non proident, 
+                    in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+                <button>Acheter</button>
+                <div class="image-small">
+                    <div class="small">
+                        <img src="./assets/image/CasqueP2.png"/>
+                    </div>
+                    <div class="small">
+                        <img src="./assets/image/CasqueP1.png"/>
+                    </div>
+                    <div class="small">
+                        <img src="./assets/image/CasqueP3.png"/>
+                    </div>
+                </div>          
+            </div>
+            <div class="imageContent">
+                <img src="./assets/image/CasqueG.png"/>
+            </div> 
+        </section>
+    </header>
+    
 </body>
 </html>
