Added middle content + footer

--- a/index.html
+++ b/index.html
@@ -42,10 +42,50 @@
                 </div>          
             </div>
             <div class="imageContent">
-                <img src="./assets/image/CasqueG.png"/>
+                <img src="./assets/image/casqueG.png"/>
             </div> 
         </section>
     </header>
+    <section class="secondContent 2ndPosition">
+        <div class="second-Content content">
+            <p class="pub">Nouveau produit disponible</p>
+            <h1>Le nouveau casque de la marque</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore
+                magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                exercitation ullamco laboris nisi ut aliquip ex ea 
+                commodo consequat. Duis aute irure dolor in reprehenderit
+                in voluptate velit esse cillum dolore eu fugiat nulla 
+                pariatur. Excepteur sint occaecat cupidatat non proident, 
+                in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <button>Voir les spécifications</button>
+        </div>
+        <div class="imgNewCasque">
+            <img src="./assets/image/casqueBlanc.png">
+        </div>
+    </section>
+    <footer class="footer">
+        <div>
+            <h3 class="headFooter">Aide</h3>
+            <p>contact@</p>
+            <p>Contacter-nous</p>
+            <p>Comment acheter</p>
+        </div>
+        <div>
+            <h3 class="headFooter">Recrutement</h3>
+            <p>business@</p>
+            <p>Postuler en ligne</p>
+            <p>Comment faire ?</p>
+        </div>
+        <div>
+            <h3 class="headFooter">Réseaux</h1>
+            <p>Facebook</p>
+            <p>Twitter</p>
+            <p>Instagram</p>
+        </div>
+        
+    </footer>
     
 </body>
 </html>
